--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -51,20 +51,10 @@ header nav {
 header ul {
     list-style-type: none;
     display: flex;
-    padding: 10px;
-  
+    padding: 10px;  
 }
 
-header li {
-    flex: 1;
-}
 
-header li a {
-    text-decoration: none;
-    color: rgb(4, 4, 121);
-    font-weight: bold;
-    font-size: 1.3rem;
-}
 
 main {
     display: grid;
@@ -147,5 +137,34 @@ footer {
 footer p {
     margin: 10px;
 }
+
+
+.navigation {
+    grid-column: 1 / 4;    
+	list-style: none;
+	display: flex;
+	align-items: center;
+    width: 100%;
+    background-color:  rgb(248, 0, 111);
+}
+
+.navigation li {
+	flex: 1 1 auto;
+}
+.navigation a {
+	display: block;
+	color: #eee;
+	padding: 0.75rem;
+	text-decoration: none;
+	text-align: center;
+    font-weight: bold;
+    font-size: 1.3rem;
+}
+
+.wrap {
+		flex-wrap: wrap;
+}
+
+
 
 
