--- a/week01/styles/temples-large.css
+++ b/week01/styles/temples-large.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	font-family: "roboto", sans-serif;
+	font-family: "Roboto", sans-serif;
 }
 
 /* Larger Views ******************************/
