--- a/week01/styles/temples-large.css
+++ b/week01/styles/temples-large.css
@@ -13,12 +13,15 @@ body {
 	header {
 		display: flex;
 		align-items: center;
-	justify-content: space-between;
+		justify-content: space-between;
+		background-color: blueviolet;
+		
 	}
 	
 	nav {
 		justify-content: flex-end;
 		flex-direction: row;
+		border-radius: 10px;
 	}
 	nav a {
 		flex: 1 1 100%;
@@ -38,12 +41,12 @@ section {margin: 1rem auto; max-width: 960px;}
 
 figure {background-color:#fff;}
 
-img { width: 100%; height: auto; margin: .5rem;}
+img { width: 100%; height: auto; margin: .5rem; border-radius: 5px;}
 
 figcaption {text-align: center; font-size: smaller;}
 
 /* hover effect */
-.hover:hover {box-shadow: 0 0 50px #333;}
+.hover:hover {box-shadow: 0 0 50px blueviolet;}
 /* rounded corners - boxmodel */
 
 
@@ -52,7 +55,7 @@ figcaption {text-align: center; font-size: smaller;}
 
 footer {
     grid-column: 1/3;
-    background-color: rgb(112, 25, 64);
+    background-color: blueviolet;
     color:aliceblue;
     padding: 10px;
     text-align: center;
