--- a/week01/styles/filtered-temples.css
+++ b/week01/styles/filtered-temples.css
@@ -169,7 +169,7 @@ div figcaption {
 }
 
 footer{
-    background-color: blueviolet;;
+    background-color: blueviolet;
     margin-top: 30px;
     padding: 20px;
 }
