--- a/week01/styles/form.css
+++ b/week01/styles/form.css
@@ -58,24 +58,24 @@ form input[type="checkbox"] {
     margin-right: 10px;
 }
 
-form .ratContainer {
+form .rating-container {
     display: flex;
     flex-direction: column;
 }
 
-form .ratOptions {
+form .rating-options {
     display: flex;
     margin-top: 5px;
 }
 
-form .ratOptions label {
+form .rating-options label {
     margin-right: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-form .ratOptions label span {
+form .rating-options label span {
     margin-right: 5px;
     margin-bottom: 5px;
 }
